@startuml "cinnamon cinemas"
skinparam ClassAttributeIconSize 0

class AppUISections {
    - cinemasController : CinemasController,
    - theatrePrinter : ITheatrePrinter,

    + AppUISections( \n\
        cinemasController : CinemasController, \n\
        theatrePrinter : ITheatrePrinter, \n\
    )

    + SelectTheatre() : void
    + ActionOnSelectedTheatre() : void
    + AllocateSeat() : void
    + DeleteTheatre() : void
}

interface ITheatrePrinter <<interface>> {
    + Print(theatre : Theatre) : void
    
    + Print(\n\
        theatre : Theatre, \n\
        recentlyAllocatedSeats : List<Seat>\n\
    ) : void
}

class TheatrePrinter {
}

interface ISeatNumberGenerator <<interface>> {
    + GenerateSeatNumber(\n\
        rowNumber : int, \n\
        columnNumber : int \n\
    ) : string
}

class SeatNumberGenerator {
}

class CinemasController {
    - seatNumberGenerator : ISeatNumberGenerator

    - theatres : List<Theatre>
    - selectedTheatre : Theatre
    - recentlyAllocatedSeats : List<Seat>

    + CinemasController(\n\
        seatNumberGenerator: ISeatNumberGenerator\n\
    )

    + GetTheatres() : List<Theatre>
    + GetSelectedTheatre() : Theatre
    + GetRecentlyAllocatedSeats() : List<Seat>

    + AddTheatre(\n\
        rowCount : int, \n\
        columnCount : int, \n\
        theatreInfo : string, \n\
    ) : void

    + SelectTheatre(theatre : Theatre) : void

    + AllocateSeatsOnSelectedTheatre(number : int) : void

    + DeleteTheatre(theatre : Theatre) : void
}

class Theatre {
    - rowCount : int
    - columnCount : int
    - theatreInfo : string
    - seats : List<Seat>

    + Theatre(\n\
        rowCount : int, \n\
        columnCount : int, \n\
        theatreInfo : string, \n\
        seatNumberGenerator : ISeatNumberGenerator)

    + GetRowCount() : int
    + GetColumnCount() : int
    + GetTheatreInfo() : string
    + GetSeats() : List<Seat>

    + GetAvailableSeatsCount() : int
    + AllocateSeats(number : int) : List<Seat>
}

class Seat {
    - status : SeatStatus
    - seatNumber : string

    + Seat(seatNumber : string)

    + GetStatus() : SeatStatus
    + GetSeatNumber() : string
    + Allocate() : void
}

Enum SeatStatus {
    Available
    Allocated
}

AppUISections o-- CinemasController
AppUISections o-- ITheatrePrinter

CinemasController o-- Theatre
CinemasController o--- Seat
CinemasController o-- ISeatNumberGenerator

ITheatrePrinter --> Theatre
ITheatrePrinter ---> Seat

Theatre o-- Seat
Theatre --> ISeatNumberGenerator

ISeatNumberGenerator <|.. SeatNumberGenerator

Seat o-- SeatStatus

ITheatrePrinter <|.. TheatrePrinter

@enduml